# t4c-server-linux

./: .gitattributes  .gitignore  CMakeLists.txt  PORT_LINUX_CHANGELOG.md  SETUP.md  T4C Server.sln  build.sh  docker-compose.yml
Crypto/: Crypt.h  Xorkey.h  crypt.cpp  crypt.h  xorkey.h
Dll Gameops/: DemoPortal2.h  DemoPortal3.cpp  DemoPortal3.h  DemoPortal4.cpp  DemoPortal6.cpp  DemoPortal6.h  EmptyDungeonPortal.cpp  EmptyDungeonPortal.h  GMAssistant.H  GMassistant.cpp  HealingPlant.cpp  HealingWell.cpp  IslandMadnessPortal.h  IslandPortal1.cpp  IslandPortal10.cpp  IslandPortal10.h  IslandPortal11.h  IslandPortal13.cpp  IslandPortal13.h  IslandPortal14.h  IslandPortal18.cpp  IslandPortal18.h  IslandPortal19.cpp  IslandPortal19.h  IslandPortal2.cpp  IslandPortal2.h  IslandPortal20.h  IslandPortal21.cpp  IslandPortal22.cpp  IslandPortal22.h  IslandPortal23.cpp  IslandPortal24.h  IslandPortal25.cpp  IslandPortal26.cpp  IslandPortal26.h  IslandPortal27.cpp  IslandPortal29.cpp  IslandPortal29.h  IslandPortal3.cpp  IslandPortal3.h  (+60 more)
Dll Npcs/: Balork.CPP  Balork.H  BrotherKiran.h  DelvarIrongrip.H  DelvarIrongrip.cpp  Dll Npcs.vcproj  Edgar.h  ElmertMerkiss.cpp  ElmertMerkiss.h  Fali.CPP  Guardman.h  Halam.h  Iraltok.h  JagarKar.h  Kilhiam.CPP  Kilhiam.h  KirlorDhul.cpp  Mithrand.cpp  Mithrand.h  MonsterStatSetup.cpp  Murmuntag.h  NPC.CPP  Ortanalas.cpp  Ortanalas.h  Pig.cpp  Pig.h  Rolph.h  Shadow.cpp  Shadow.h  Sigfried.cpp  TwinNevanis.CPP  TwinNevanis.H  Uranos.cpp  dragon.cpp
Dll Npcs Addon/: Amelia.cpp  Amelia.h  BedNomad1.cpp  BlueShardChest.cpp  BookshelfNomad1.h  BookshelfNomad2.cpp  BookshelfNomad2.h  BookshelfNomad3.cpp  BookshelfNomad3.h  Carman.H  Carman.cpp  CarmanSpawner.cpp  CarmanSpawner.h  ChaosEastToCenterPortal.cpp  ChaosEastToCenterPortal.h  ChaosSouthToCenterPortal.cpp  ChaosSouthToCenterPortal.h  ChaosWestExitPortal.cpp  CrystalPortal.cpp  CrystalPortal.h  Custodian.cpp  DefilementPortal1.cpp  DefilementPortal2.h  Dll Npcs Addon.vcproj  DoorEfnisien2.cpp  DoorGluriurl1.h  DoorGluriurl2.cpp  DoorGluriurl2.h  DoorGunthar1.h  DoorNomad1.cpp  DoorOlinHaad1.cpp  Doppelganger.H  Doppelganger.cpp  DoppelgangerPortal1a.cpp  DoppelgangerPortal2b.cpp  DoppelgangerPortal2b.h  DoppelgangerPortal3b.cpp  DoppelgangerPortal3b.h  DoppelgangerPortal4b.cpp  DoppelgangerPortal4b.h  (+116 more)
Dll Npcs Arakas/: Annabelle.H  Asarr.H  Dll Npcs Arakas.vcproj  Dunikus.CPP  Dunikus.H  Jarko.cpp  Jarko.h  Karahn.h  LanceSilversmith.h  Lantalir.CPP  Lantalir.H  LighthavenSamaritan.H  LighthavenSamaritan.cpp  Mirandul.CPP  Mirandul.H  MonsterStatSetup.cpp  NPC.CPP  NPCGoblinScout.h  NPCGoblinWarrior.H  ProfessionTrainer.CPP  ProfessionTrainer.H  RenegadeOrcLeader.cpp  SebanForgelot.h  Totak.CPP  Yrian.h
Dll Npcs RavensDust/: AaronBrownbark.h  Adriana.h  Amandra.h  AnrakBrownbark.H  AnrakBrownbark.cpp  BaldricSilverknife.H  BaneBlackblood.H  BaneBlackblood.cpp  Belagan.cpp  Belagan.h  BishopCrowbanner.H  Boreas.cpp  Boreas.h  Brother1.cpp  Brother1.h  Brother10.h  Brother11.h  Brother2.cpp  Brother2.h  Brother4.cpp  Brother4.h  Brother5.h  Brother7.h  Brother8.h  Brother9.h  CaptainIronleg.cpp  Celydia.cpp  Celydia.h  ChamberlainThomar.cpp  Dafyd.h  DeepOneBoss.cpp  DerranIronstrife.cpp  DerranIronstrife.h  Dll Npcs RavensDust.vcproj  Doremas.cpp  Drardos.cpp  Drardos.h  DwarthonStoneface.cpp  DwarthonStoneface.h  ElysanaBlackrose.cpp  (+54 more)
Dll Npcs Remort/: Archibald.h  Arena2MobXP100.cpp  Arena2MobXP110.H  Arena2MobXP110.cpp  Arena2MobXP120.cpp  Arena2MobXP130.cpp  Arena2MobXP140.H  Arena2MobXP150.H  Arena2MobXP150.cpp  Arena2MobXP170.H  Arena2MobXP180.H  Arena2MobXP180.cpp  Arena2MobXP200.cpp  Arena2MobXP225.h  Arena2MobXP250.H  Arena2MobXP250.cpp  Arena2MobXP300.H  Arena2MobXP325.h  Arena2MobXP350.h  Arena2MobXP375.cpp  Arena2MobXP400.cpp  Arena2MobXP450.cpp  Arena2MobXP475.cpp  Arena2MobXP475.h  Arena2MobXP50.H  Arena2MobXP500.cpp  Arena2MobXP70.H  Arena2MobXP80.cpp  Arena2MobXP80.h  Arena3MobXP100.cpp  Arena3MobXP130.h  Arena3MobXP150.cpp  Arena3MobXP150.h  Arena3MobXP160.H  Arena3MobXP170.cpp  Arena3MobXP180.cpp  Arena3MobXP190.H  Arena3MobXP200.cpp  Arena3MobXP200.h  Arena3MobXP225.cpp  (+153 more)
Dll Npcs Stoneheim/: BeltiganWhitesword.cpp  BeltiganWhitesword.h  BlightPortal.cpp  Bloodlust.H  Bloodlust.cpp  CentaurSentinel.cpp  CentaurTracker.cpp  ChieftainYahgwuhl.cpp  ChryseidaYolangda.cpp  ChryseidaYolangda.h  CryptChest1.h  CryptChest2.cpp  CryptChest2.h  CryptChest3.cpp  CryptChest4.cpp  CryptChest5.h  DantalirSongweaver.cpp  DaranAnnithae.h  DaranAtrocity.cpp  DaranAtrocity.h  DelnarSteelblade.cpp  DionysusSilverstream.h  Dll Npcs Stoneheim.vcproj  Eldantor.h  Eldrig.cpp  GabrielArchonis.cpp  Glaenshenmilandira.cpp  GoblinAssassinGlubGlub.h  GrantHornkeep.cpp  GulfridSteelhammer.h  HeadhunterWajpoothin.cpp  HeadhunterWajpoothin.h  HerewaldIronbender.h  HunterGruttWorgwloth.h  HunterTruggWorgwloth.cpp  Julian.h  KahpLethGuard1.h  KahpLethGuard2.H  KhanWulgworth.cpp  KhanWulgworth.h  (+103 more)
Dll Npcs WindHowl/: AssystAnter.cpp  BrotherHarforr.h  BrotherNiuss.cpp  CaptainHarockHarr.cpp  Drunk.cpp  Eraka.cpp  Eraka.h  Garnir.cpp  Garnir.h  GeorgeTheIIIrd.cpp  GeorgeTheIIIrd.h  GreyarEedy.cpp  GuntertagDestroy.h  Gwen.cpp  IroualKnowall.cpp  IroualKnowall.h  JurnistakrKira.cpp  JurnistakrKira.h  Karl.h  LiurnClar.cpp  LiurnClar.h  LordSunrock.cpp  Malaar.h  MirakNira.h  MiramLaky.cpp  MiramLaky.h  MonsterStatSetup.cpp  Mushn.cpp  Mushn.h  NPC.CPP  RylethCth.cpp  SamilAlgder.cpp  SamilAlgder.h  SkipperRedBeard.cpp  SkipperRedBeard.h  WindHowl_Guard.cpp  WindHowl_Guard.h  WoundedGuard.h
Elng Files/: t4c_eng.lng  t4c_frn.lng  t4c_ger.lng
Exe Server/: Arena1Master.cpp  Assertion.cpp  Assertion.h  AsyncFuncQueue.cpp  AsyncFuncQueue.h  AutoConfig.cpp  AutoConfig.h  AutoLock.h  Autolock.cpp  C_SERVIC.CPP  C_SERVIC.H  Capuchon.h  Character.cpp  Character.h  Clans.cpp  ComPacketHeader.h  CommCenter.h  Commands.cpp  Creatures.h  CustomBuild.h  DIRections.h  DLLCreatures.h  DeadlockDetector.cpp  DebugLogger.cpp  DebugLogger.h  DynamicFlags.cpp  GenRef.h  (+126 more)
(+1380 files in other folders)
